2014-01-13  Jakub Jelinek  <jakub@redhat.com>

	PR libgomp/59194
	* omp-low.c (expand_omp_atomic_pipeline): Expand the initial
	load as __atomic_load_N if possible.

2014-01-11  David Edelsohn  <dje.gcc@gmail.com>

	* config/rs6000/rs6000.c (rs6000_expand_mtfsf_builtin): Remove
	target parameter.
	(rs6000_expand_builtin): Adjust call.

2014-01-11  David Edelsohn  <dje.gcc@gmail.com>

	PR target/58115
	* config/rs6000/rs6000.h (SWITCHABLE_TARGET): Define.
	* config/rs6000/rs6000.c: Include target-globals.h.
	(rs6000_set_current_function): Instead of doing target_reinit
	unconditionally, use save_target_globals_default_opts and
	restore_target_globals.

	* config/rs6000/rs6000-builtin.def (mffs, mtfsf): Add builtins for
	FPSCR.
	* config/rs6000/rs6000.c (rs6000_expand_mtfsf_builtin): New.
	(rs6000_expand_builtin): Handle mffs and mtfsf.
	(rs6000_init_builtins): Define mffs and mtfsf.
	* config/rs6000/rs6000.md (UNSPECV_MFFS, UNSPECV_MTFSF): New constants.
	(rs6000_mffs): New pattern.
	(rs6000_mtfsf): New pattern.

2014-01-11  Bin Cheng  <bin.cheng@arm.com>

	* tree-ssa-loop-ivopts.c (iv_ca_narrow): New parameter.
	Start narrowing with START.  Apply candidate-use pair
	and check overall cost in narrowing.
	(iv_ca_prune): Pass new argument.

2014-01-10  Jeff Law  <law@redhat.com>

	PR middle-end/59743
	* ree.c (combine_reaching_defs): Ensure the defining statement
	occurs before the extension when optimizing extensions with
	different source and destination hard registers.

2014-01-10  Jan Hubicka  <jh@suse.cz>

	PR ipa/58585
	* ipa-devirt.c (build_type_inheritance_graph): Also add types of vtables
	into the type inheritance graph.

2014-01-10  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/59754
	* ree.c (combine_reaching_defs): Disallow !SCALAR_INT_MODE_P
	modes in the REGNO != REGNO case.

2014-01-10  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* config/rs6000/rs6000-builtin.def: Fix pasto for VPKSDUS.

2014-01-10  Jakub Jelinek  <jakub@redhat.com>
